@@ -3,6 +3,7 @@ package flo.no.kanji.business.mapper;
 import flo.no.kanji.business.model.Kanji;
 import flo.no.kanji.integration.entity.KanjiEntity;
 import flo.no.kanji.integration.entity.TranslationEntity;
+import flo.no.kanji.util.ListUtils;
 import org.springframework.stereotype.Service;
 
 import java.util.stream.Collectors;
@@ -22,20 +23,41 @@ public class KanjiMapper {
      * @return Transformed business kanji object
      */
     public Kanji toBusinessObject(KanjiEntity kanjiEntity) {
+        return toBusinessObject(kanjiEntity, null);
+    }
+
+    /**
+     * Transforms a Kanji entity to business object
+     *
+     * @param kanjiEntity Input entity
+     * @param listLimit   Max size of lists contained in the object to convert
+     * @return Transformed business kanji object
+     */
+    public Kanji toBusinessObject(KanjiEntity kanjiEntity, Integer listLimit) {
         if (kanjiEntity == null) {
             return null;
         }
+        var onYomi = kanjiEntity.getOnYomi();
+        var kunYomi = kanjiEntity.getKunYomi();
         var translations = kanjiEntity.getTranslations() != null ?
                 kanjiEntity.getTranslations().stream()
                         .collect(Collectors.groupingBy(TranslationEntity::getLanguage,
-                                Collectors.mapping(TranslationEntity::getTranslation, Collectors.toList())
+                                Collectors.mapping(TranslationEntity::getTranslation,
+                                        Collectors.collectingAndThen(
+                                                Collectors.toList(),
+                                                list -> listLimit != null ? list.stream()
+                                                        .limit(listLimit)
+                                                        .toList() : list
+                                        )
+                                )
                         )) : null;
+
         return Kanji.builder()
                 .id(kanjiEntity.getId())
-                .kunYomi(kanjiEntity.getKunYomi())
-                .onYomi(kanjiEntity.getOnYomi())
-                .translations(translations)
                 .value(kanjiEntity.getValue())
+                .onYomi(listLimit != null ? ListUtils.truncateList(onYomi, listLimit) : onYomi)
+                .kunYomi(listLimit != null ? ListUtils.truncateList(kunYomi, listLimit) : kunYomi)
+                .translations(translations)
                 .build();
     }
 
